# compbio

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  playerdb.kv  playerdb.py
include/: readme
src/: CMakeLists.txt  readme
src/csps/: CMakeLists.txt
src/csps/Encryption/: aws_key.txt  enc.py
src/csps/Kivy/: studentdb.kv  studentdb.py  test.py
src/csps/Version_1/: CMakeLists.txt  csps.py  playerdb.kv  threespace_api.py  win32_threespace_utils.py
src/csps/Version_1/Encryption/: enc.py  public.pem
src/csps/src/: CMakeLists.txt  coachsafeplaysafe.kv  coachsafeplaysafe.py  csps.kv  csps.py  cspscloud.py  playerdb.py  players.db  python_gui_test.py  studentdb.kv  studentdb.py  threespace_api.py  threespace_utils.py  video.py  win32_threespace_utils.py
src/eema/: CMakeLists.txt
src/eema/doc/: CMakeLists.txt
src/eema/doc/doxygen/: CMakeLists.txt  eema.dox.in
src/eema/doc/resources/: mainpage.dox
src/eema/doc/resources/images/PowerPoint/: EEMA-Images.pptx  Slide1.eps
src/eema/examples/: CMakeLists.txt
src/eema/examples/2-elt-hex/: CMakeLists.txt  input.inp  main.cpp
src/eema/examples/2-elt-hex/results/: kinetic_energy_system.txt  system_mass.txt  total_energy_system.txt
src/eema/examples/2-elt-hex/results/vtu/: eem_matrix_0.vtu  eem_matrix_1124.vtu  eem_matrix_114.vtu  eem_matrix_1186.vtu  eem_matrix_287.vtu  eem_matrix_345.vtu  eem_matrix_521.vtu  eem_matrix_639.vtu  eem_matrix_940.vtu  eem_truss_1001.vtu  eem_truss_1063.vtu  eem_truss_1186.vtu  eem_truss_287.vtu  eem_truss_345.vtu  eem_truss_403.vtu  eem_truss_462.vtu  eem_truss_580.vtu  eem_truss_759.vtu  eem_truss_819.vtu  eem_truss_880.vtu
src/eema/examples/example-1/: CMakeLists.txt  controls.inp  input.inp  input_1m.inp  input_allElastic_displacement.inp  input_allElastic_displacement_noFiber.inp  input_allElastic_load.inp  input_allHyperElastic_load.inp  input_bk.inp  input_memf.inp  input_multifiber.inp  input_nofiber.inp  input_nofiber_current.inp  main.cpp  mesh.k
src/eema/examples/example-1/results/: external_energy_system.txt  internal_energy_system.txt
src/eema/examples/example-1/results/vtu/: eem_matrix_1001.vtu  eem_matrix_1063.vtu  eem_matrix_171.vtu  eem_matrix_229.vtu  eem_matrix_403.vtu  eem_matrix_462.vtu  eem_matrix_57.vtu  eem_matrix_580.vtu  eem_matrix_699.vtu  eem_matrix_759.vtu  eem_matrix_819.vtu  eem_matrix_880.vtu  eem_truss_0.vtu  eem_truss_1124.vtu  eem_truss_114.vtu  eem_truss_171.vtu  eem_truss_229.vtu  eem_truss_521.vtu  eem_truss_57.vtu  eem_truss_639.vtu  eem_truss_699.vtu  eem_truss_940.vtu
src/eema/examples/example-2/: CMakeLists.txt  case-1-mphysics.inp  input.inp  input_case-1-mp-16elements.inp  main.cpp
src/eema/examples/parallel-test/: CMakeLists.txt  main.cpp  run.pbs
src/eema/gui/: CMakeLists.txt  defines.h.cmake  mainwindow.ui
src/eema/include/: BC.h  Constraint.h  GlobalVariables.h  Materials.h  Mesh.h  System.h  functions.h
src/eema/src/: CMakeLists.txt
src/eema/src/Elements/: CMakeLists.txt
src/eema/src/Elements/ElementCalculations/: fe_calCentroid.cpp  fe_calDefGrad.cpp  fe_calJacobian.cpp  fe_calSimpTransformation.cpp  fe_calTransformation.cpp  fe_maxElementLength.cpp  fe_minElementLength.cpp  fe_strDispMatrix.cpp  fe_tensor2voigt.cpp  fe_transformMass.cpp  fe_voigt2tensor.cpp
src/eema/src/Elements/InternalNodalForce/: fe_stiffness_embed_truss.cpp  fe_stiffness_hex.cpp
src/eema/src/Elements/Mass/: fe_massLumped.cpp  fe_mass_hex.cpp
src/eema/src/Elements/Quadrature/: fe_guass_points.cpp  fe_guass_points_3d.cpp  fe_guass_weights.cpp  fe_guass_weights_3d.cpp
src/eema/src/Elements/ShapeFunctions/: fe_dn_actual_8.cpp  fe_dn_iso_8.cpp  fe_shapeMatrix.cpp  fe_shapes.cpp
src/eema/src/FEM/: CMakeLists.txt
src/eema/src/FEM/Assembly-Global-Local/: fe_assemble.cpp  fe_assemble_mass.cpp  fe_find_index.cpp  fe_gather.cpp  fe_scatter.cpp
src/eema/src/FEM/BioElectroPhysics/: fe_bioElectroPhysics.cpp  fe_electroStatics_embed.cpp  fe_electroStatics_normal.cpp  fe_electrostatics.cpp
src/eema/src/FEM/BoundaryConditions/: fe_apply_bc.cpp
src/eema/src/FEM/Electromechanics/: fe_electromechanics.cpp
src/eema/src/FEM/Explicit/: fe_mainEXPLICIT.cpp  fe_timeUpdate.cpp
src/eema/src/FEM/SolidMechanics/: fe_calculateAccln.cpp  fe_calculateEW.cpp  fe_calculateFR.cpp  fe_calculateIE.cpp  fe_calculateKE.cpp  fe_calculateMass.cpp  fe_calculateVDE.cpp  fe_checkEnergies.cpp  fe_damageUpdate.cpp  fe_findIntgPoints_1d.cpp  fe_getForce_3d_embed.cpp  fe_getForce_3d_normal.cpp  fe_getPressure_lbv.cpp  fe_getforce.cpp  fe_stressModify.cpp  fe_update.cpp
src/eema/src/Input-Output/: CMakeLists.txt
src/eema/src/Input-Output/Input/: BC.cpp  Constraint.cpp  Materials.cpp  Mesh.cpp  fe_damageVariableImport.cpp  fe_mainRead.cpp  fe_mainRead_originalBackup.cpp  fe_text2matrix.cpp  initial.cpp
src/eema/src/Input-Output/Output/: fe_damageVariableExport.cpp  fe_damageVariableWrite.cpp  fe_display.cpp  fe_energyWrite.cpp  fe_matrix2text.cpp  fe_reactionForceWrite.cpp  fe_simulationTime.cpp  fe_singleDoubleWrite.cpp  fe_vector2text.cpp  fe_vtk.cpp  fe_vtu.cpp  fe_write.cpp
src/eema/src/Materials/: CMakeLists.txt  fe_get_conductivity.cpp  fe_get_mats.cpp  fe_get_model.cpp
src/eema/src/Materials/Elastic/: fe_simple_elastic.cpp
src/eema/src/Materials/Mooney-Rivlin-Hyperelastic/: fe_mooneyrivlin_hyperelastic.cpp
src/eema/src/Materials/Ogden-Hyperelastic/: fe_ogden_hyperelastic.cpp
src/eema/src/Materials/Saint-Venant/: fe_saintvenant_elastic.cpp
src/eema/src/Materials/StressUpdate/: fe_stressUpdate.cpp  fe_stressUpdateDamage.cpp  fe_stressUpdateViscoelasticity.cpp  fe_stressUpdate_1d.cpp
src/eema/src/Math/: CMakeLists.txt
src/eema/src/Math/GeneralMath/: fe_calArea_4.cpp  fe_calCurrLength.cpp  fe_calVolume.cpp  fe_concatenate_vector2matrix.cpp  fe_crossProduct.cpp  fe_detMatrix.cpp  fe_detMatrix_old.cpp  fe_find.cpp  fe_function.cpp  fe_invMatrix.cpp  fe_invMatrix_old.cpp  fe_newtonRhapson.cpp  fe_sort.cpp  fe_transpMatrix.cpp
src/eema/src/TimeStep/: CMakeLists.txt  fe_calTimeStep.cpp  fe_calWaveSpeed.cpp  fe_getTimeStep.cpp
(+15 files in other folders)
