#===============================================================================
# Build EEMA
#===============================================================================
option(EEMA "Activate EEMA" OFF)
if(EEMA)
  add_subdirectory(eema)
endif()

#===============================================================================
# Build CSPS Interface
#===============================================================================
option(CSPS "Activate CSPS" OFF)
if(CSPS)
  add_subdirectory(csps)
endif()
