SET(FEM_src
    SolidMechanics/fe_update.cpp
    SolidMechanics/fe_getforce.cpp
    SolidMechanics/fe_calculateMass.cpp
    SolidMechanics/fe_calculateAccln.cpp
    SolidMechanics/fe_calculateKE.cpp
    SolidMechanics/fe_getForce_3d_normal.cpp
    SolidMechanics/fe_getForce_3d_embed.cpp
    SolidMechanics/fe_findIntgPoints_1d.cpp
    SolidMechanics/fe_calculateFR.cpp
    SolidMechanics/fe_calculateIE.cpp
    SolidMechanics/fe_calculateVDE.cpp
    SolidMechanics/fe_calculateEW.cpp
    SolidMechanics/fe_checkEnergies.cpp
    SolidMechanics/fe_getPressure_lbv.cpp
    SolidMechanics/fe_stressModify.cpp
    SolidMechanics/fe_damageUpdate.cpp
    Explicit/fe_mainEXPLICIT.cpp
    Explicit/fe_timeUpdate.cpp
    BioElectroPhysics/fe_bioElectroPhysics.cpp
    BioElectroPhysics/fe_electroStatics_normal.cpp
    BioElectroPhysics/fe_electroStatics_embed.cpp
    BioElectroPhysics/fe_electrostatics.cpp
    BoundaryConditions/fe_apply_bc.cpp
    Assembly-Global-Local/fe_scatter.cpp
    Assembly-Global-Local/fe_gather.cpp
    Assembly-Global-Local/fe_find_index.cpp
    Assembly-Global-Local/fe_assemble.cpp
    Constraints/EmbeddedElements/fe_compute_host.cpp
    Constraints/EmbeddedElements/fe_embed_preprocessing.cpp
    Constraints/EmbeddedElements/fe_embed_node_host_check.cpp
    Constraints/EmbeddedElements/fe_embed_element_intersection_point.cpp
    Constraints/EmbeddedElements/fe_embed_preprocessing_host_map.cpp
    Constraints/EmbeddedElements/fe_checkFiberVolumeFraction.cpp
     )
ADD_LIBRARY(FEM OBJECT ${FEM_src})

